@@ -202,6 +202,10 @@ incrementing a binNMU version number, and add a binNMU changelog comment.
 Increment the Debian release number for a Debian QA Team upload, and
 add a QA upload changelog comment.
 .TP
+.B \-\-security
+Increment the Debian release number for a Debian Security Team non-maintainer
+upload, and add a Security Team upload changelog comment.
+.TP
 .B \-\-bpo
 Increment the Debian release number for a upload to etch-backports,
 and add a backport upload changelog comment.
