@@ -87,12 +87,11 @@ Options:
   -n, --nmu
          Increment the Debian release number for a non-maintainer upload
   --bin-nmu
-         Increment the Debian release number for a binary non-maintainer
-         upload by ether appending a "+b1" to a non-binNMU version
-         number or by incrementing a binNMU version number, and add a
-         binNMU changelog comment.
+         Increment the Debian release number for a binary non-maintainer upload
   --qa
          Increment the Debian release number for a Debian QA Team upload
+  -s,--security
+         Increment the Debian release number for a Debian Security Team upload
   --bpo
          Increment the Debian release number for a Backports.org upload
 	 to "etch-backports"
@@ -146,7 +145,7 @@ Options:
          Display this help message and exit
   --version
          Display version information
-  At most one of -a, -i, -e, -r, -v, -d, -n, --bin-nmu, --qa, --bpo (or their long equivalents)
+  At most one of -a, -i, -e, -r, -v, -d, -n/--nmu, --bin-nmu, --qa, -s/--security,--bpo (or their long equivalents)
   may be used.
   With no options, one of -i or -a is chosen by looking for a .upload
   file in the parent directory and checking its contents.
@@ -250,7 +249,7 @@ if (@ARGV and $ARGV[0] =~ /^--no-?conf$/) {
 # with older debchange versions.
 my ($opt_help, $opt_version);
 my ($opt_i, $opt_a, $opt_e, $opt_r, $opt_v, $opt_b, $opt_d, $opt_D, $opt_u);
-my ($opt_n, $opt_bn, $opt_qa, $opt_bpo, $opt_c, $opt_m, $opt_create, $opt_package, @closes);
+my ($opt_n, $opt_bn, $opt_qa, $opt_s, $opt_bpo, $opt_c, $opt_m, $opt_create, $opt_package, @closes);
 my ($opt_news);
 my ($opt_ignore, $opt_level, $opt_regex, $opt_noconf);
 
@@ -273,6 +272,7 @@ GetOptions("help|h" => \$opt_help,
 	   "n|nmu" => \$opt_n,
 	   "bin-nmu" => \$opt_bn,
 	   "qa" => \$opt_qa,
+	   "s|security" => \$opt_s,
 	   "bpo" => \$opt_bpo,
 	   "query!" => \$opt_query,
 	   "closes=s" => \@closes,
@@ -318,8 +318,12 @@ if (defined $opt_level) {
 if (defined $opt_regex) { $check_dirname_regex = $opt_regex; }
 
 # Only allow at most one non-help option
-fatal "Only one of -a, -i, -e, -r, -v, -d, -n/--nmu, --bin-nmu, --qa, --bpo is allowed;\ntry $progname --help for more help"
-    if ($opt_i?1:0) + ($opt_a?1:0) + ($opt_e?1:0) + ($opt_r?1:0) + ($opt_v?1:0) + ($opt_d?1:0) + ($opt_n?1:0) + ($opt_bn?1:0) + ($opt_qa?1:0) + ($opt_bpo?1:0) > 1;
+fatal "Only one of -a, -i, -e, -r, -v, -d, -n/--nmu, --bin-nmu, --qa, -s/--security,--bpo is allowed;\ntry $progname --help for more help"
+    if ($opt_i?1:0) + ($opt_a?1:0) + ($opt_e?1:0) + ($opt_r?1:0) + ($opt_v?1:0) + ($opt_d?1:0) + ($opt_n?1:0) + ($opt_bn?1:0) + ($opt_qa?1:0) + ($opt_s?1:0) + ($opt_bpo?1:0) > 1;
+
+if ($opt_s) {
+    $opt_u = "high";
+}
 
 if (defined $opt_u) {
     fatal "Urgency can only be one of: low, medium, high, critical, emergency"
@@ -369,8 +373,9 @@ fatal "--package cannot be used when creating a NEWS file"
     if $opt_package && $opt_news;
 
 if ($opt_create) {
-    if ($opt_a || $opt_i || $opt_e || $opt_r || $opt_b || $opt_n || $opt_bn || $opt_qa || $opt_bpo) {
-	warn "$progname warning: ignoring -a/-i/-e/-r/-b/-n/--bin-nmu/--qa/--bpo options with --create\n";
+    if ($opt_a || $opt_i || $opt_e || $opt_r || $opt_b || $opt_n || $opt_bn ||
+	    $opt_qa || $opt_s || $opt_bpo) {
+	warn "$progname warning: ignoring -a/-i/-e/-r/-b/-n/--bin-nmu/--qa/-s/--bpo options with --create\n";
 	$warnings++;
     }
     if ($opt_package && $opt_d) {
@@ -812,7 +817,7 @@ my $tmpchk=1;
 my ($NEW_VERSION, $NEW_SVERSION, $NEW_UVERSION);
 my $line;
 
-if (($opt_i || $opt_n || $opt_bn || $opt_qa || $opt_bpo || $opt_v || $opt_d ||
+if (($opt_i || $opt_n || $opt_bn || $opt_qa || $opt_s || $opt_bpo || $opt_v || $opt_d ||
     ($opt_news && $VERSION ne $changelog{'Version'})) && ! $opt_create) {
 
     # Check that a given explicit version number is sensible.
@@ -881,7 +886,7 @@ if (($opt_i || $opt_n || $opt_bn || $opt_qa || $opt_bpo || $opt_v || $opt_d ||
 	    my $start=$1;
 	    # If it's not already an NMU make it so
 	    # otherwise we can be safe if we behave like dch -i
-	    if ($opt_n and (not $start =~ /\.$/ or $VERSION eq $UVERSION)) {
+	    if (($opt_n or $opt_s) and (not $start =~ /\.$/ or $VERSION eq $UVERSION)) {
 		if ($VERSION eq $UVERSION) {
 		    # First NMU of a Debian native package
 		    $end .= "-0.1";
@@ -931,6 +936,9 @@ if (($opt_i || $opt_n || $opt_bn || $opt_qa || $opt_bpo || $opt_v || $opt_d ||
 	$line = 1;
     } elsif ($opt_qa && ! $opt_news) {
 	print O "  * QA upload.\n";
+	$line = 1;
+    } elsif ($opt_s && ! $opt_news) {
+        print O "  * Non-maintainer upload by the Security Team.\n";
 	$line = 1;
     } elsif ($opt_bpo && ! $opt_news) {
 	print O "  * Rebuild for Etch backports.\n";
