@@ -20,7 +20,9 @@ devscripts (2.10.12) UNRELEASED; urgency=low
      + add a -n/--no-action option printing emails to stdout instead
        of sending them. (Closes: #458603)
      + add a "SEE ALSO" section in manual page. (Closes: #458296)
-  * dch: add a --bin-nmu option for binNMUs. (Closes: #458496)
+  * dch:
+     + add a --bin-nmu option for binNMUs. (Closes: #458496)
+     + add a -s/--security option for Security Team uploads.
 
   [ Adam D. Barratt ]
   * who-uploads: Actually check debian-keyring.pgp by default rather
@@ -41,7 +43,7 @@ devscripts (2.10.12) UNRELEASED; urgency=low
   * chdist: Added improvements and fixed bugs. Thanks to Raphaël Pinson
     (Closes: #457841)
 
- -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Wed, 02 Jan 2008 03:36:05 +0100
+ -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Wed, 02 Jan 2008 03:52:15 +0100
 
 devscripts (2.10.11) unstable; urgency=low
 
